second commit minpro197

--- a/src/main/resources/templates/fragments/layout-login.html
+++ b/src/main/resources/templates/fragments/layout-login.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="images/favicon.ico" type="image/ico" />
 
-    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">Gentellela!</title>
+    <title layout:title-pattern="$LAYOUT_TITLE | $CONTENT_TITLE">MinPro197</title>
      
     <!-- Bootstrap -->
     <link th:href="@{~/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
