--- a/src/main/resources/templates/fragments/fragment-footer-content.html
+++ b/src/main/resources/templates/fragments/fragment-footer-content.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footer-content">
     <div class="pull-right">
-        Gentelella - Bootstrap Admin Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+        <b class="copyright">&copy; 2019 JAVA 197 </b>All rights reserved. 
     </div>
     <div class="clearfix"></div>
 </footer>
