--- a/src/main/resources/templates/fragments/fragment-top-navigation.html
+++ b/src/main/resources/templates/fragments/fragment-top-navigation.html
@@ -3,15 +3,46 @@
 <div class="top_nav" th:fragment="top-navigation">
 	<div class="nav_menu">
 		<nav>
-			<div class="nav toggle">
-				<a id="menu_toggle"><i class="fa fa-bars"></i></a>
-			</div>
-
+			<!-- <div class="nav toggle">
+				<a id="menu_toggle"><i class="fa fa-bars"></i></a> 
+			</div>  -->
+			<ul class="nav navbar-nav navbar-left">
+				<li class="">
+					<a href="" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						<span>Menu 1</span> <span class="fa fa-angle-down"></span>
+					</a>
+					<ul class="dropdown-menu dropdown-usermenu pull-left">
+						<li><a href="#"> SubMenu 1</a></li>
+						<li><a href="#"> SubMenu 2</a></li>
+						<li><a href="#"> SubMenu 3</a></li>
+					</ul>
+				</li>
+				<li class="">
+					<a href="" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						<span>Menu 1</span> <span class="fa fa-angle-down"></span>
+					</a>
+					<ul class="dropdown-menu dropdown-usermenu pull-left">
+						<li><a href="#"> SubMenu 1</a></li>
+						<li><a href="#"> SubMenu 2</a></li>
+						<li><a href="#"> SubMenu 3</a></li>
+					</ul>
+				</li>
+				<li class="">
+					<a href="" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+						<span>Menu 1</span> <span class="fa fa-angle-down"></span>
+					</a>
+					<ul class="dropdown-menu dropdown-usermenu pull-left">
+						<li><a href="#"> SubMenu 1</a></li>
+						<li><a href="#"> SubMenu 2</a></li>
+						<li><a href="#"> SubMenu 3</a></li>
+					</ul>
+				</li>
+			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li sec:authorize="isAuthenticated()" class="">
 					<a href="" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false"> 
 						<img th:src="@{~/build/images/img.jpg}" alt=""> 
-						<span sec:authentication="name">CrunchDroid</span>
+						<span sec:authentication="name"></span>
 						<span class="fa fa-angle-down"></span>
 					</a>
 					<ul class="dropdown-menu dropdown-usermenu pull-right">
