--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -10,7 +10,7 @@
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Pelamar</h3>
+                <h3>XSIS 2.0</h3>
             </div>
 
             <div class="title_right">
