--- a/src/main/resources/templates/lain-lain/index.html
+++ b/src/main/resources/templates/lain-lain/index.html
@@ -2,9 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="x_panel">
 	<div class="x_title">
-		<h2>Keluarga</h2>
+		<h2>Lain-lain</h2>
 		<ul class="nav navbar-left panel_toolbox">
-			<li><a th:href="@{~/keluarga/add}" id="btn-addkeluarga"><i
+			<li><a th:href="@{~/lain-lain/add}" id="btn-addlainlain"><i
 					class="fa fa-plus"></i></a></li>
 		</ul>
 		<div class="clearfix"></div>
@@ -14,16 +14,12 @@
 			<table class="table">
 				<thead>
 					<tr>
-						<th>Hubungan</th>
-						<th>Nama</th>
-						<th>JK</th>
-						<th>TGL. LAHIR</th>
-						<th>PENDIDIKAN</th>
-						<th>PEKERJAAN</th>
+						<th>Nama Keahlian</th>
+						<th>Level Keahlian</th>
 						<th>#</th>
 					</tr>
 				</thead>
-				<tbody id="keluarga-content">
+				<tbody id="keahlian-content">
 
 				</tbody>
 		</div>
@@ -36,11 +32,11 @@
 	function loadData() {
 		//fungsi jquery
 		$.ajax({
-			url : '/keluarga/list',
+			url : '/keahlian/list',
 			type : 'get',
 			dataType : 'html',
 			success : function(result) {
-				$("#keluarga-content").html(result);
+				$("#keahlian-content").html(result);
 			}
 		});
 	}
@@ -52,7 +48,7 @@
 	//tambah Data Keluarga
 	$("#btn-add").click(function(event) {
 		event.preventDefault();
-		var url = 'keluarga/add';
+		var url = 'keahlian/add';
 		$.ajax({
 			url : url,
 			type : 'get',
