--- a/src/main/resources/templates/pelamar/detail.html
+++ b/src/main/resources/templates/pelamar/detail.html
@@ -1,16 +1,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="modal-header">
 	<button type="button" class="close btn-xs" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-	<h4 class="modal-title" id="biodata-title">Tambah Pelamar</h4>
+	<h4 class="modal-title" id="biodata-title">Detail Pelamar</h4>
 </div>
 <div class="modal-body">
-	<div class="row">
-		<div class="col-md-2 col-sm-2 col-xs-12">
+	<div class="row" style="margin:0;">
+		<div class="col-md-2">
 			<div class="btn-group-vertical">
 				<button th:each="item : ${biodataMenuList}" class="btn btn-default biodata-menu" th:href="@{~/{url}(url=${item.menuUrl})}" th:text="${item.title}" data-biodata-id="1"></button>
 			</div>
 		</div>
-		<div class="col-md-10 col-sm-10 col-xs-12" id="detail-content">
+		<div class="col-md-10" id="detail-content">
 		
 		</div>
 	</div>
