--- a/src/main/resources/templates/pelamar/index.html
+++ b/src/main/resources/templates/pelamar/index.html
@@ -54,8 +54,7 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-		                <div class="row" id="row-content">      
-                        </div>
+		                <div class="row" id="row-content"></div>
                     </div>
                 </div>
             </div>
