--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -34,7 +34,7 @@
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>Daftar Pelamar</h2>
+                        <h2>Beranda</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                             	<a href="#"><i class="fa fa-sort-alpha-asc"></i></a>
