--- a/src/main/resources/templates/keluarga/index.html
+++ b/src/main/resources/templates/keluarga/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="x_panel">
 	<div class="x_title">
-		<h2>Keahlian</h2>
+		<h2>Keluarga</h2>
 		<ul class="nav navbar-left panel_toolbox">
 			<li><a th:href="@{~/keluarga/add/}" id="btn-add-keluarga"
 				th:attr="data-biodata-id=${biodata.id}"><i class="fa fa-plus"></i></a></li>
