--- a/src/main/resources/templates/pelatihan/index.html
+++ b/src/main/resources/templates/pelatihan/index.html
@@ -2,26 +2,30 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <div class="x_panel">
 	<div class="x_title">
-		<h2>Keahlian</h2>
+		<h2>Pelatihan</h2>
 		<ul class="nav navbar-left panel_toolbox">
-			<li><a th:href="@{~/keahlian/add/}" id="btn-add-keahlian"
+			<li><a th:href="@{~/pelatihan/add/}" id="btn-add-pelatihan"
 				th:attr="data-biodata-id=${biodata.id}"><i class="fa fa-plus"></i></a></li>
 		</ul>
 		<div class="clearfix"></div>
 	</div>
-	<div class="x_content" id="keluarga-content">
+	<div class="x_content" id="pelatihan-content">
 		<table class="table">
 			<thead>
 				<tr>
-					<th>Nama Keahlian</th>
-					<th>Level Keahlian</th>
+					<th>Pelatihan/Workshop</th>
+					<th>Penyelenggara</th>
+					<th>Waktu</th>
+					<th>Durasi</th>
 					<th>#</th>
 				</tr>
 			</thead>
-			<tbody id="list-keahlian">
-				<tr th:each="item :${listKeahlian}">
-					<td th:text="${item.skillName}"></td>
-					<td th:text="${item.skillLevel.name}"></td>
+			<tbody id="list-pelatihan">
+				<tr th:each="item :${listPelatihan}">
+					<td th:text="${item.trainingName}"></td>
+					<td th:text="${item.organizer}"></td>
+					<td><span th:text="${item.trainingYear}"></span>-<span th:text="${item.trainingMonth}"></span></td>
+					<td th:text="${item.trainingDuration}"></td>
 					<td class="col-md-1">
 						<div class="btn-group">
 							<button data-toggle="dropdown"
@@ -30,8 +34,8 @@
 								More <span class="caret"></span>
 							</button>
 							<ul role="menu" class="dropdown-menu">
-								<li><a th:href="@{/keahlian/edit/{kid}(kid=${item.id})}" class="btn-ubah">Ubah</a></li>
-								<li><a th:href="@{/keahlian/hapus/{kid}(kid=${item.id})}" class="btn-hapus">Hapus</a></li>
+								<li><a th:href="@{/pelatihan/edit/{kid}(kid=${item.id})}" class="btn-ubah">Ubah</a></li>
+								<li><a th:href="@{/pelatihan/hapus/{kid}(kid=${item.id})}" class="btn-hapus">Hapus</a></li>
 							</ul>
 						</div>
 					</td>
@@ -39,7 +43,7 @@
 			</tbody>
 		</table>
 		<div class="row">
-			<div class="col-md-12 col-sm-12 col-xs-12" id="list-keluarga">
+			<div class="col-md-12 col-sm-12 col-xs-12" id="list-pelatihan">
 			
 			</div>
 		</div>
@@ -68,7 +72,7 @@
 <script type="text/javascript">
 
 	//saat button add di click
-	$("#btn-add-keahlian").click(function(event) {
+	$("#btn-add-pelatihan").click(function(event) {
 		// cegah link redirect
 		event.preventDefault();
 		// mengambil nilai dari attribute btn-add-keahlian
@@ -76,10 +80,10 @@
 		var biodataId = $(this).attr('data-biodata-id');
 
 		// ambil nilai attribute href
-		// lihat th:href="@{~/keahlian/add/}"
+		// lihat th:href="@{~/pelatihan/add/}"
 		var url = $(this).attr('href') + biodataId;
 		// buat ajax untuk create
-		// lihat keahlian controller @GetMapping(value="/keahlian/add/{bid}")
+		// lihat keahlian controller @GetMapping(value="/pelatihan/add/{bid}")
 		$.ajax({
 			url : url,
 			type : 'GET',
@@ -93,10 +97,10 @@
 	});
 	
 	// submit data form atau simpan data keahlian
-	// event di modal input, kemudian cari elemen dengan id => form-keahlian
+	// event di modal input, kemudian cari elemen dengan id => form-pelatihan
 	// eventnya itu adalah ketika formnya di submit
-	$("#form-modal").on('submit', '#form-keahlian', function() {
-		// dapatkan url dari attribute action dari form #form-keahlian
+	$("#form-modal").on('submit', "#form-pelatihan", function() {
+		// dapatkan url dari attribute action dari form #form-pelatihan
 		// lihat di file _create.html
 		var url = $(this).attr('action');
 		// mendatakan data form dengan method serialize
@@ -134,26 +138,87 @@
 	function loadData() {
 		// ambil nilai biodata id yang disimpan di  $("#btn-add-keahlian")
 		// lihat sintaks ini th:attr="data-biodata-id=${biodata.id}"
-		var biodataId = $("#btn-add-keahlian").attr('data-biodata-id');
+		var biodataId = $("#btn-add-pelatihan").attr('data-biodata-id');
 		$.ajax({
-			url : '/keahlian/list/' + biodataId,
+			url : '/pelatihan/list/' + biodataId,
 			type : 'GET',
 			dataType : 'html',
 			success : function(data) {
-				// <tbody id="list-keahlian"> akan di replace dengan data baru dari file _list.html masukan dulu result ke modal
-				$("#list-keahlian").html(data);
+				// <tbody id="list-pelatihan"> akan di repleace dengan data baru
+				// dari file _list.html
+				// masukan dulu result ke modal
+				$("#list-pelatihan").html(data);
 			}
 		});
 	}
 	
-	// event hapus
-	$('#list-keahlian').on('click', 'btn-hapus', function(event) {
+	// event ubah
+	$('#list-pelatihan').on('click', 'btn-ubah', function(event) {
 		//cegah link supaya tidak redirect
 		event.preventDefault();
 
 		var url = $(this).attr('href');
 		// buat Ajax untuk hapus data
-		// lihat keluarga controller @GetMapping(value="/keluarga/hapus/{kid}")
+		// lihat pelatihan controller @GetMapping(value="/pelatihan/edit/{sid}")
+			
+		$.ajaX({
+			url : url,
+			type : 'GET',
+			dataType : 'html',
+			success : function(data) {
+				$("#ubah-modal-content").html(data);
+				$("#ubah-modal").modal('show');
+			}
+		});
+	});
+	
+	// submit data form atau simpan data keahlian
+	// event di modal input, kemudian cari elemen dengan id => form-keahlian
+	// eventnya itu adalah ketika formnya di submit
+	$("#ubah-modal").on('submit', "#form-pelatihan", function() {
+		// dapatkan url dari attribute action dari form #form-pelatihan
+		// lihat di file _create.html
+		var url = $(this).attr('action');
+		// mendatakan data form dengan method serialize
+		var data = $(this).serialize();
+
+		$.ajax({
+			url : url, // url diisi dengan variable url
+			type : 'POST',
+			data : data, // data diisi dengan variable data
+			dataType : 'html',
+
+			success : function(data) {
+				// masukkan dulu resultnya ke modal
+				$("#ubah-modal-content").html(data);
+				// check jumlah element yang memiliki class => has-error
+				var check = $("#ubah-modal-content").find(".has-error").length;
+				// jika tidak ada error
+				if (check == 0) {
+					// menyembunyikan modal dengan id => form-modal
+					$("#ubah-modal").modal('hide');
+					// tampilkan data dengan memanggil method loadData
+					loadData();
+				}
+			}
+		});
+		// untuk mencegah supaya tidak submit automatis,
+		// sehingga form akan diam tidak melakukan action apapun
+		return false;
+	})
+	
+	.on('click', '#btn-close-form', function() {
+		$("#ubah-modal").modal('hide');
+	});
+	
+	// event hapus
+	$('#list-pelatihan').on('click', 'btn-hapus', function(event) {
+		//cegah link supaya tidak redirect
+		event.preventDefault();
+
+		var url = $(this).attr('href');
+		// buat Ajax untuk hapus data
+		// lihat pelatihan controller @GetMapping(value="/pelatihan/hapus/{sid}")
 			
 		$.ajaX({
 			url : url,
@@ -166,8 +231,8 @@
 		});
 	});
 
-	$("#hapus-modal").on('submit', '#form-keahlian', function() {
-		// dapatkan url dari attribute action dari form => #form-keluarga
+	$("#hapus-modal").on('submit', '#form-pelatihan', function() {
+		// dapatkan url dari attribute action dari form => #form-pelatihan
 		// lihat di file _create.html
 		var url = $(this).attr('action');
 		// mendatakan data form dengan method serialize
